--- a/Untitled46.ipynb
+++ b/Untitled46.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPmPGgovD1TJQQEa6g2Uss6",
+      "authorship_tag": "ABX9TyPjpU1ru2A+UJv5tAWb9Aux",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1850,12 +1850,54 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.tree import DecisionTreeRegressor\n",
+        "predict = \"price\"\n",
+        "df = df[[\"symboling\", \"wheelbase\", \"carlength\",\n",
+        "             \"carwidth\", \"carheight\", \"curbweight\",\n",
+        "             \"enginesize\", \"boreratio\", \"stroke\",\n",
+        "             \"compressionratio\", \"horsepower\", \"peakrpm\",\n",
+        "             \"citympg\", \"highwaympg\", \"price\"]]\n",
+        "\n",
+        "x = np.array(df.drop([predict], 1))\n",
+        "y = np.array(df[predict])\n",
+        "xtrain, xtest, ytrain, ytest = train_test_split(x,y, test_size=0.2)\n",
+        "model = DecisionTreeRegressor()\n",
+        "model.fit(xtrain, ytrain)\n",
+        "predictions = model.predict(xtest)\n",
+        "\n",
+        "from sklearn.metrics import mean_absolute_error\n",
+        "model.score(xtest, predictions)\n"
+      ],
       "metadata": {
-        "id": "MX-l0FTqWkwG"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MX-l0FTqWkwG",
+        "outputId": "045d0c5b-abb5-4d33-80e9-d3df6dc051c0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-12-9bf8aa0b0443>:10: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
+            "  x = np.array(df.drop([predict], 1))\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
     }
   ]
 }
